k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: # New section. Sets up the Persisten Volume using Claim. *Only allocates the storage*
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts: # New section. Assigns for use by the container
            - name: postgres-storage # Name needs to be same as persistent volume to be used (in volumes section)
              mountPath: /var/lib/postgresql/data # anything stored inside this directory will actually be stored inside the volume (default location for postgres)
              subPath: postgres # the data stored inside the persistent volume will be stored in 'postgres' folder
