k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations: # Additional Configuration options that specify higher level config
    kubernetes.io/ingress.class: "nginx" # Telling Kubernetes we want to create Ingress controller based on nginx project
    nginx.ingress.kubernetes.io/use-regex: "true"
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # How our copy of nginx is going to behave (eg: remove '/api' from request)
    # UPDATE ANNOTATION
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # If the path is / followed by anything, send to pods governed by service given below
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*) # If the path leading /api/, send to pods governed by service given below
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
